# CMakeList.txt : CMake project for ceng580hw3, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("ceng580hw3")

# Add source to this project's executable.
add_executable (ceng580hw3 "ceng580hw3.cpp" "ceng580hw3.h")

# TODO: Add tests and install targets if needed.
